// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/TextInput/TextInput.tools.svelte: Default 1`] = `
<span
  class="inline-block w-64 svelte-136j3mg"
>
  <span
    class="svelte-r9z0vs"
  >
     
    <input
      class="svelte-r9z0vs"
      placeholder=""
      type="text"
    />
  </span>
</span>
`;

exports[`Toolshot components/TextInput/TextInput.tools.svelte: With icon and placeholder 1`] = `
<span
  class="inline-block w-64 svelte-136j3mg"
>
  <span
    class="svelte-r9z0vs icon"
  >
    <i
      class="material-icons svelte-r9z0vs"
    >
      search
    </i>
     
    <input
      class="svelte-r9z0vs"
      placeholder="search..."
      type="search"
    />
  </span>
</span>
`;

exports[`Toolshot components/TextInput/TextInput.tools.svelte: With value 1`] = `
<span
  class="inline-block w-64 svelte-136j3mg"
>
  <span
    class="svelte-r9z0vs icon"
  >
    <i
      class="material-icons svelte-r9z0vs"
    >
      person
    </i>
     
    <input
      class="svelte-r9z0vs"
      placeholder=""
      type="text"
    />
  </span>
</span>
`;
